--- a/src/TripsTracker.Web/src/components/layout/PointsSummaryPopup.module.scss
+++ b/src/TripsTracker.Web/src/components/layout/PointsSummaryPopup.module.scss
@@ -93,6 +93,8 @@
 
 .tooltipWrap {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .helpBtn {
